# sci

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  settings.yaml
docs/: README.md  cli-reference.md  configuration.md  garak-integration.md  troubleshooting-garak.md
docs/examples/: config.json  config.yaml  garak-comprehensive.yaml  garak-minimal.yaml  garak-multi-provider.yaml  garak-standard.yaml  profile-compliance-focused.yaml  profile-security-focused.yaml
src/sci/: __init__.py  __main__.py  version.py
src/sci/cli/: __init__.py  config.py  main.py  report.py  run.py
src/sci/config/: __init__.py  defaults.py  manager.py  models.py
src/sci/engine/: __init__.py  exceptions.py  garak_engine.py  results.py
src/sci/engine/templates/: report.html.jinja2
src/sci/garak/: __init__.py  adapters.py  client.py  mappings.py
src/sci/logging/: __init__.py  setup.py
tests/: __init__.py
tests/fixtures/: __init__.py  config_invalid.yaml  config_valid.json  config_valid.yaml  garak_reports.py
tests/integration/: __init__.py  conftest.py  test_cli_garak.py  test_garak_engine.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_garak_adapters.py  test_garak_client.py  test_garak_exceptions.py  test_garak_mappings.py  test_garak_results.py  test_logging.py
